Support use type

--- a/resources/languages/en-US/banner.ini
+++ b/resources/languages/en-US/banner.ini
@@ -1,5 +1,6 @@
 banner.action.preview="Preview"
 banner.field.category="Category"
+banner.field.type="Type"
 banner.field.description="Desceiprion"
 banner.field.link="Link"
 banner.field.mobile.image="Mobile Image"
@@ -38,6 +39,7 @@ banner.widget.field.rewind="Rewind"
 banner.widget.field.screen.width="Screen Width"
 banner.widget.field.scrollbar="Show Scrollbar"
 banner.widget.field.show.type.option.category="Category"
+banner.widget.field.show.type.option.type="Type"
 banner.widget.field.show.type.option.files="Uploaded"
 banner.widget.field.show.type="Show Type"
 banner.widget.field.space.between="Margin (px)"
