--- a/resources/languages/zh-TW/banner.ini
+++ b/resources/languages/zh-TW/banner.ini
@@ -1,5 +1,6 @@
 banner.action.preview="預覽"
 banner.field.category="分類"
+banner.field.type="類型"
 banner.field.description="說明"
 banner.field.link="連結"
 banner.field.mobile.image="行動裝置圖片"
@@ -38,6 +39,7 @@ banner.widget.field.rewind="結束後回頭"
 banner.widget.field.screen.width="螢幕寬度"
 banner.widget.field.scrollbar="顯示滾動軸"
 banner.widget.field.show.type.option.category="依分類"
+banner.widget.field.show.type.option.type="依類型"
 banner.widget.field.show.type.option.files="依上傳檔案"
 banner.widget.field.show.type="顯示模式"
 banner.widget.field.space.between="間距 (px)"
