Prepare for 1.0.2 release.

--- a/resources/languages/en-US/banner.ini
+++ b/resources/languages/en-US/banner.ini
@@ -49,4 +49,5 @@ banner.widget.tab.display="Display"
 banner.widget.tab.html="HTML"
 banner.widget.title="Banner Widget"
 banner.widget.field.component="Template Component"
+banner.message.save.first="Please save first to upload images."
 luna.banner.title="Banner"
