--- a/resources/languages/zh-TW/banner.ini
+++ b/resources/languages/zh-TW/banner.ini
@@ -49,4 +49,5 @@ banner.widget.tab.display="顯示"
 banner.widget.tab.html="HTML"
 banner.widget.title="橫幅小工具"
 banner.widget.field.component="模版元件名稱"
+banner.message.save.first="請先儲存才能上傳圖片"
 luna.banner.title="橫幅"
